[gd_scene load_steps=2 format=3 uid="uid://dp62xykpvnb07"]

[ext_resource type="Script" path="res://GameMenus/GameScripts/GeneralDescriptionScreen.gd" id="1_0tfxn"]

[node name="GeneralDescriptionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0tfxn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 30.0
offset_right = 110.0
offset_bottom = 69.0
text = "<"

[node name="CaseTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 78.0
offset_right = 1362.0
offset_bottom = 183.0
horizontal_alignment = 1

[node name="CaseDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 353.0
offset_top = 265.0
offset_right = 1774.0
offset_bottom = 967.0
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
